--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "lint-staged": {
     "**/*": [
-      "eslint src/* --fix",
+      "eslint src/* --fix --ignore-pattern *.md",
       "prettier --write --ignore-unknown"
     ]
   },
