--- a/ui/package.json
+++ b/ui/package.json
@@ -22,7 +22,7 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "snarkyjs": "0.*",
+    "snarkyjs": "^0.7.3",
     "typescript": "4.8.4"
   }
 }
