--- a/contracts/config.json
+++ b/contracts/config.json
@@ -5,7 +5,7 @@
       "url": "https://proxy.berkeley.minaexplorer.com/graphql",
       "keyPath": "keys/berkeley.json",
       "fee": "0.1",
-      "smartContract": "SelectiveVCSketch"
+      "smartContract": "SelectiveDisclosure"
     },
     "berkeley-add": {
       "url": "https://proxy.berkeley.minaexplorer.com/graphql",
