--- a/ui/package.json
+++ b/ui/package.json
@@ -25,5 +25,10 @@
     "react-dom": "18.2.0",
     "snarkyjs": "^0.7.3",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
