full end to end working

--- a/contracts/tsconfig.json
+++ b/contracts/tsconfig.json
@@ -20,6 +20,6 @@
     "allowSyntheticDefaultImports": true,
     "isolatedModules": true
   },
-  "include": ["./src"],
+  "include": ["./src", "./scripts"],
   "exclude": ["./src/**/*.test.ts"]
 }
