--- a/contracts/package.json
+++ b/contracts/package.json
@@ -41,6 +41,7 @@
     "lint-staged": "^11.0.1",
     "prettier": "^2.3.2",
     "ts-jest": "^27.0.7",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.2"
   },
   "peerDependencies": {
